--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Reset password - Hikvision / Dahua</title>
+  <link rel="icon" href="icon.png" type="image/png">
+  <title>Скинути пароль HikVision / Dahua</title>
   <style>
     * { box-sizing: border-box; }
 
@@ -215,7 +216,7 @@
       <a class="contact-button" href="viber://chat?number=%2B380955907769" target="_blank">
         <img src="viber.png" alt="Viber" class="icon"> Viber
       </a>
-      <a class="contact-button" href="mailto:hikvisionreset@example.com">
+      <a class="contact-button" href="mailto:hikvisionresetpas@gmail.com">
         <img src="email.png" alt="Email" class="icon"> Email
       </a>
       <a class="contact-button" href="tel:+380955907769">
