--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="icon" href="icon.png" type="image/x-icon">
+  <link rel="icon" href="icon.ico" type="image/x-icon">
   <title>Скинути пароль HikVision / Dahua</title>
   <style>
     * { box-sizing: border-box; }
