--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 </head>
 <body>
   <header>
-    <div style="border-bottom: 2px solid #7c32ff; padding-bottom: 5px; font-weight: bold;">Reset password</div>
+    <div style="border-bottom: 2px solid #7c32ff; padding-bottom: 5px; font-weight: bold;">Сервіс по скиданню</div>
     <h1>Відновимо доступ до вашого обладнання<br>Hikvision / Dahua</h1>
     <p>
       Ми — команда технічних спеціалістів, яка професійно займається обслуговуванням обладнання Hikvision та Dahua: 
